# image-io

./: CMakeLists.txt  README.md  idr_test.cpp  idw_test.cpp  image_dir_reader.hpp  image_dir_writer.hpp  structures.hpp
